--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,7 +1,8 @@
 #container{
-    border: 2px solid gray;
-    width: 360px;
-    margin: 0 auto;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);    
+width: 360px;
+    margin: 100px auto;
+    background: #f7f7f7;
 }
 .completed{
     color: gray;
