--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,3 +1,12 @@
+h1{
+    background: #2980b9;
+    color:  white;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: normal;
+}
 #container{
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);    
 width: 360px;
