--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -7,6 +7,12 @@ h1{
     font-size: 24px;
     font-weight: normal;
 }
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 #container{
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);    
 width: 360px;
