--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -17,6 +17,15 @@ ul{
     margin: 0;
     padding: 0;
 }
+li{
+    background: white;
+    height: 40px;
+    line-height: 40px;
+    color: #666;
+}
+li:nth-child(2n){
+    background: #f7f7f7;
+}
 #container{
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);    
 width: 360px;
