--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,53 +1,58 @@
-body{
-    font-family: Roboto;
+body {
+  font-family: Roboto;
+
+  background: #CC95C0;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+ 
 }
 
-h1{
-    background: #2980b9;
-    color:  white;
-    margin: 0;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-size: 24px;
-    font-weight: normal;
+h1 {
+  background: #2980b9;
+  color: white;
+  margin: 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: normal;
 }
 
-ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-li{
-    background: white;
-    height: 40px;
-    line-height: 40px;
-    color: #666;
+li {
+  background: white;
+  height: 40px;
+  line-height: 40px;
+  color: #666;
 }
-li:nth-child(2n){
-    background: #f7f7f7;
+li:nth-child(2n) {
+  background: #f7f7f7;
 }
-input{
-    font-size: 18px;
-    color: #2980b9;
-    background: #f7f7f7;
-    width: 100%;
-    padding: 13px 13px 13px 20px ;
-    box-sizing: border-box;
-    /* border-box: including padding but not the margins */
+input {
+  font-size: 18px;
+  color: #2980b9;
+  background: #f7f7f7;
+  width: 100%;
+  padding: 13px 13px 13px 20px;
+  box-sizing: border-box;
+  /* border-box: including padding but not the margins */
 }
-input:focus{
-    background: white;
-    border: 3px solid #2980b9;
-    outline: none;
-
+input:focus {
+  background: white;
+  border: 3px solid #2980b9;
+  outline: none;
 }
-#container{
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);    
-width: 360px;
-    margin: 100px auto;
-    background: #f7f7f7;
+#container {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 360px;
+  margin: 100px auto;
+  background: #f7f7f7;
 }
-.completed{
-    color: gray;
-    text-decoration: line-through;
+.completed {
+  color: gray;
+  text-decoration: line-through;
 }
