--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -7,7 +7,6 @@ body {
   
  
 }
-
 h1 {
   background: #2980b9;
   color: white;
@@ -17,7 +16,6 @@ h1 {
   font-size: 24px;
   font-weight: normal;
 }
-
 ul {
   list-style: none;
   margin: 0;
@@ -58,4 +56,14 @@ input:focus {
 }
 .fa-plus{
     float: right;
+}
+span{
+    background: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 40px;
+    display: inline-block;
+
 }
