--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,11 +1,25 @@
 body {
   font-family: Roboto;
 
-  background: #CC95C0;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #7AA1D2, #DBD4B4, #CC95C0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
- 
+  background: #cc95c0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #7aa1d2,
+    #dbd4b4,
+    #cc95c0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #7aa1d2,
+    #dbd4b4,
+    #cc95c0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+#container {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 360px;
+  margin: 100px auto;
+  background: #f7f7f7;
 }
 h1 {
   background: #2980b9;
@@ -15,20 +29,6 @@ h1 {
   text-transform: uppercase;
   font-size: 24px;
   font-weight: normal;
-}
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-li {
-  background: white;
-  height: 40px;
-  line-height: 40px;
-  color: #666;
-}
-li:nth-child(2n) {
-  background: #f7f7f7;
 }
 input {
   font-size: 18px;
@@ -45,31 +45,39 @@ input:focus {
   border: 3px solid #2980b9;
   outline: none;
 }
-#container {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 360px;
-  margin: 100px auto;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  background: white;
+  height: 40px;
+  line-height: 40px;
+  color: #666;
+}
+li:nth-child(2n) {
   background: #f7f7f7;
 }
 .completed {
   color: gray;
   text-decoration: line-through;
 }
-.fa-plus{
-    float: right;
+.fa-plus {
+  float: right;
 }
-span{
-    background: #e74c3c;
-    height: 40px;
-    margin-right: 20px;
-    text-align: center;
-    color: white;
-    width: 0px;
-    display: inline-block;
-    transition: 0.2s linear;
-    opacity: 0;
+span {
+  background: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  width: 0px;
+  display: inline-block;
+  transition: 0.2s linear;
+  opacity: 0;
 }
-li:hover span{
-    width: 40px;
-    opacity: 1;
+li:hover span {
+  width: 40px;
+  opacity: 1;
 }
