--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -51,6 +51,7 @@ ul {
   padding: 0;
 }
 li {
+  cursor: context-menu;
   background: white;
   height: 40px;
   line-height: 40px;
@@ -65,6 +66,7 @@ li:nth-child(2n) {
 }
 .fa-plus {
   float: right;
+  cursor: pointer;
 }
 span {
   background: #e74c3c;
